[package]
name = "sock5s"
version = "0.2.2"
authors = ["南浦月 <nanpuyue@gmail.com>"]
description = "A Simple Socks5 Proxy Server"
homepage = "https://github.com/nanpuyue/sock5s"
repository = "https://github.com/nanpuyue/sock5s"
keywords = ["socks5", "proxy", "server"]
categories = ["command-line-utilities"]
license = "MIT"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.54"
libc = "0.2.180"
socket2 = "0.6.1"
tokio = { version = "1.49.0", features = ["io-util", "macros", "rt-multi-thread", "net"] }
tokio-stream = "0.1.18"
